# Qtunnel

./: .env.example  .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: ci.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  config.rs  credential.rs  db.rs  error.rs  main.rs  tests.rs
src-tauri/src/api/: client.rs  dns.rs  mod.rs  security.rs  token.rs  tunnel.rs  utils.rs  zone.rs
src-tauri/src/models/: certificate.rs  local_service.rs  mod.rs  route.rs  script.rs  security.rs  tunnel.rs  zone.rs
src-tauri/src/services/: cache.rs  config.rs  dns.rs  local_service.rs  mod.rs  routing.rs  scripting.rs  security.rs  tunnel.rs  zone.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/cards/: TunnelCard.tsx
src/components/dashboard/: DashboardContent.tsx
src/components/editors/: LuaEditor.tsx
src/components/layout/: Sidebar.tsx  ThemeProvider.tsx  TitleBar.tsx  TopBar.tsx
src/components/modals/: CreateTunnelModal.tsx  QuickBindModal.tsx  ScriptEditorModal.tsx  TunnelConfigModal.tsx  TunnelDetailModal.tsx
src/components/pages/: ScriptsPage.tsx  SecurityPage.tsx  ServicesPage.tsx  SettingsPage.tsx  TunnelsPage.tsx  ZonesPage.tsx
src/components/security/: CertificateManagement.tsx  DdosProtection.tsx  IpRules.tsx  WafRules.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Label.tsx  Modal.tsx  (+4 more)
src/lib/: api.ts  defaults.ts  store.ts  toast.ts
(+5 files in other folders)
